--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-Script pra automação da utilização da ferramenta GAM para gerenciamento e atualização do Gsuit/Google Admin
+# Automação GAM
+Script pra automação do CRUD de emails da ferramenta GAM para gerenciamento e atualização recursiva do Gsuit/Google Admin
